--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -387,6 +387,8 @@ $form-padding: 0.5rem;
   }
 } // /radiobutton-field
 
+
+
 //
 // Generic Checkbox Style
 //
@@ -406,8 +408,14 @@ $form-padding: 0.5rem;
 
   label {
     display: inline-block;
+    line-height: 1.2;
     position: relative;
     padding-left: 1.75rem;
+    width: 65%;
+
+    // @include media($xtrasmall-breakpoint) {
+    //   width: 65%;
+    // }
   }
 
   label::after,
@@ -622,6 +630,11 @@ $form-padding: 0.5rem;
   }
 }
 
+
+
+//
+// Left hand Search field.
+//
 @mixin search-form() {
   // used for left-column searches
   margin: 0 0 1rem;
@@ -635,6 +648,8 @@ $form-padding: 0.5rem;
   }
 }
 
+
+
 //
 // Basic Text Area
 //
@@ -647,6 +662,7 @@ $form-padding: 0.5rem;
   height: $height;
   width: $width;
 }
+
 
 
 //
@@ -674,7 +690,7 @@ $form-padding: 0.5rem;
   }
 }
 
-
+// The Request page header
 @mixin request-page-header {
   @include page-header(
   $background-color: lighten($nypl-light-gray, 15%),
@@ -713,8 +729,16 @@ $form-padding: 0.5rem;
 //
 @mixin modal-filter-form {
 
+// body > div.nypl-basic-modal-container.active > div.nypl-modal-content > div > form > fieldset > fieldset:nth-child(4)
+
   .inner {
-    padding: 0 $general-padding 0 ($general-padding * 3.125);
+    border-bottom: $general-border-width solid $nypl-light-gray;
+    padding: 0 ($general-padding * 3.125);
+
+    &:nth-child(4),
+    &:nth-child(5) {
+      border-bottom: 0;
+    }
 
     @include media($xtrasmall-breakpoint) {
       padding-left: $general-padding;
@@ -723,6 +747,35 @@ $form-padding: 0.5rem;
     legend {
       font-size: 1.125rem;
       margin-top: 0.75rem;
+    }
+
+    .nypl-filter-date-field {
+
+      > label {
+        display: inline-block;
+        max-width: calc(50% - 5.125rem);
+
+        @include media($xtrasmall-breakpoint) {
+          display: block;
+          max-width: 100%;
+          width: 100%;
+        }
+      }
+
+      > .nypl-icon {
+        height: 2rem;
+        position: relative;
+        width: 2rem;
+        top: ($general-margin / 2);
+
+        @include media($xtrasmall-breakpoint) {
+          display: none;
+          height: 0;
+          visibility: hidden;
+          opacity: 0;
+          width: 0;
+        }
+      }
     }
 
     .nypl-generic-columns {
